Bug 617287 - Ensure the correct form of 'news:' URIs without server. r=aleca

'[s]news:' URIs independent of a specific server have three slashes added to be
handled correctly internally. This restores the original form as defined in
RFC 5538 when used by functions such as `nsDocumentViewer::CopyLinkLocation()`
or `XULBrowserWindow.setOverLink()`.

Differential Revision: https://phabricator.services.mozilla.com/D252833

--HG--
extra : amend_source : 6b83868ca3a3d2f148d5e7a71481f8a4d2b91c38